# model/dto/req/transfer_request.go
@@ -1,7 +1,7 @@
 package req
 
 type TransferRequest struct {
-	UserId              string `json:"user_id"`
+	UserId              string `json:"source_user_id"`
 	SourceWalletID      string `json:"source_wallet_id"`
 	DestinationWalletID string `json:"destination_wallet_id"`
 	Amount              int    `json:"amount"`
